Fixed context menu/modify-menu overlap

--- a/server-elm-style.css
+++ b/server-elm-style.css
@@ -426,6 +426,7 @@ div#modify-menu div.keyvalues>div.keyvalueadder:hover {
 div#modify-menu input {
     padding: 6px;
     width: 100%;
+    color: black;
 }
 
 div#modify-menu .codefont {
